test/test_examples/syntactic_examples/syntax_error/error_statement_14.zig
// Syntax error: missing semicolon after pseudovariable

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    const y = 9;
    _ = 18 + y
}